# claude-spec-benchmark

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: project-brief.md
docs/spec/active/2025-12-16-sdd-bench/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md
src/claude_spec_benchmark/: __init__.py  docker_manager.py  evaluator.py  harness.py  main.py  metrics.py  models.py  runner.py  sdd_runner.py  swt_metrics.py  task_loader.py
src/claude_spec_benchmark/degradation/: __init__.py  engine.py  patterns.py
src/claude_spec_benchmark/elicitation/: __init__.py  extraction.py  oracle.py  scoring.py
src/claude_spec_benchmark/frameworks/: __init__.py  claude_code.py  passthrough.py  protocol.py
src/claude_spec_benchmark/reporting/: __init__.py  dashboard.py
tests/: __init__.py  conftest.py  test_degradation.py  test_elicitation.py  test_evaluator.py  test_frameworks.py  test_harness.py  test_main.py  test_metrics.py  test_models.py  test_reporting.py  test_swt_metrics.py
